--- a/package.json
+++ b/package.json
@@ -13,16 +13,21 @@
     "@types/node": "18.11.10",
     "@types/react": "18.0.26",
     "@types/react-dom": "18.0.9",
+    "chart.js": "^4.0.1",
+    "date-fns": "^2.29.3",
     "eslint": "8.29.0",
     "eslint-config-next": "13.0.6",
     "next": "13.0.6",
     "react": "18.2.0",
+    "react-chartjs-2": "^5.0.1",
+    "react-datepicker": "^4.8.0",
     "react-dom": "18.2.0",
     "typescript": "4.9.3"
   },
   "devDependencies": {
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
+    "@types/react-datepicker": "^4.8.0",
     "autoprefixer": "^10.4.13",
     "jest": "^29.3.1",
     "jest-environment-jsdom": "^29.3.1",
